--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -23,7 +23,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>HotSpot</title>
     </head>
     <body>
         <div class="app">
@@ -34,6 +34,7 @@
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="js/plugins/statusbarnotification.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
